<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/txt_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_fullname"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_selector_background"
        android:padding="13dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_fullname"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_selector_background"
        android:padding="13dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_username"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/email"/>

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_selector_background"
        android:padding="13dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/txt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_phone"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_selector_background"
        android:padding="13dp"
        android:inputType="phone"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_phone"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/password" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_password"
        android:layout_marginTop="5dp"
        android:padding="13dp"
        android:background="@drawable/edit_selector_background"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:text="@string/confirm_password" />

    <EditText
        android:id="@+id/txt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_confirm_password"
        android:layout_marginTop="5dp"
        android:padding="13dp"
        android:background="@drawable/edit_selector_background"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <android.widget.Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_confirm_password"
        android:layout_marginTop="30dp"
        android:padding="13dp"
        android:background="@drawable/button_background"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/signup"/>

</RelativeLayout>