<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".CreateTourActivity">

    <RelativeLayout
        android:id="@+id/rl_tour_name_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_tour_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:text="@string/tour_name"/>

        <EditText
            android:id="@+id/txt_tour_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_tour_name"
            android:layout_marginTop="5dp"
            android:padding="13dp"
            android:background="@drawable/edit_selector_background"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_list_stop_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_tour_name_section"
        android:layout_marginTop="20sp">

        <TextView
            android:id="@+id/tv_list_stop_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:text="@string/stop_points"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_stop_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_list_stop_points"/>

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_list_stop_points"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:textColor="@color/white"
        android:text="@string/create"/>

</RelativeLayout>