<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_nearly"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_user"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="27sp"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_fullname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:id="@+id/ll_email_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_email_prompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_email_section"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_phone_prompt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="20sp"
                android:text="@string/phone"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textSize="20sp"/>

        </LinearLayout>

        <android.widget.Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_phone_section"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="13dp"
            android:backgroundTint="@color/green_shamrock"
            android:background="@drawable/button_background"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/update_profile"/>

        <android.widget.Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_update"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="13dp"
            android:backgroundTint="@color/green_shamrock"
            android:background="@drawable/button_background"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/logout"/>

    </RelativeLayout>

</ScrollView>